Add a logo called dinos-r-us

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>  </title>
+  <title>dinos-r-us</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href=".css" rel="stylesheet">
+  <img src="dinos-r-us.svg" alt="">
 </body>
 </html>
