--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 </head>
 <body>
   <link href=".css" rel="stylesheet">
-  <img src="dinos-r-us.svg" alt="">
+  <h1><img src="dinos-r-us.svg" alt=""></img></h1>
+  <ol>
+    Hadrosaur
+    Iguanodon
+    Stegosaurus
+  </ol>
+  ---
+
+  Hadrosaur
+  Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.
+
+  Iguanodon
+  Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.
+
+  Stegosaurus
+  Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.
 </body>
 </html>
