--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <link href=".css" rel="stylesheet">
   <h1><img src="dinos-r-us.svg" alt=""></img></h1>
   <ol>
-    Hadrosaur
-    Iguanodon
-    Stegosaurus
+    <nav>
+      Hadrosaur
+      Iguanodon
+      Stegosaurus
+    </nav>
   </ol>
   ---
 
-  Hadrosaur
-  Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.
+  <h2>Hadrosaur</h2>
+  <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
 
-  Iguanodon
-  Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.
+  <h2>Iguanodon</h2>
+  <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
 
-  Stegosaurus
-  Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.
+  <h2>Stegosaurus</h2>
+  <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
 </body>
 </html>
