Add first image

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     </nav>
   </ol>
   ---
-
+<img scr="hadrosaur.jpg" alt="">
   <h2>Hadrosaur</h2>
-  <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
+    <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
 
   <h2>Iguanodon</h2>
-  <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
+    <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
 
   <h2>Stegosaurus</h2>
-  <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
+    <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
 </body>
 </html>
