Move the image to correct place

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   ---
 <img scr="hadrosaur.jpg" alt="">
   <h2>Hadrosaur</h2>
+  <figure><img scr="hadrosaur.jpg" alt=""><figure>
     <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
 
   <h2>Iguanodon</h2>
