Add main tag and organzize list

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 <body>
   <link href=".css" rel="stylesheet">
-  <h1><img src="dinos-r-us.svg" alt=""></img></h1>
-  <ol>
-    <nav>
+  <header>
+      <h1><img src="dinos-r-us.svg" alt=""></img></h1>
+  </header>
+  <main>
+  <nav>
+    <ol>
       Hadrosaur
       Iguanodon
       Stegosaurus
-    </nav>
-  </ol>
-  ---
+    </ol>
+  </nav>
 <img scr="hadrosaur.jpg" alt="">
   <h2>Hadrosaur</h2>
   <figure><img scr="hadrosaur.jpg" alt=""><figure>
@@ -26,5 +28,6 @@
 
   <h2>Stegosaurus</h2>
     <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
+  </main>
 </body>
 </html>
