--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       Stegosaurus
     </ol>
   </nav>
-<img scr="hadrosaur.jpg" alt="">
+
   <h2>Hadrosaur</h2>
-  <figure><img scr="hadrosaur.jpg" alt=""><figure>
-    <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
+  <figure><img scr="hadrosaur.jpg" alt="100"></img><figure>
+    <p><figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.<figcaption></p>
 
   <h2>Iguanodon</h2>
     <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
