--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
 
   <h2>Hadrosaur</h2>
-  <figure><img scr="hadrosaur.jpg" alt="100"></img><figure>
+  <figure><img scr="hadrosaur.jpg" alt="hadrosaur"><figure>
     <p><figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.<figcaption></p>
 
   <h2>Iguanodon</h2>
