Source the images to the correct file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <link href=".css" rel="stylesheet">
   <header>
-      <h1><img src="dinos-r-us.svg" alt=""></img></h1>
+      <h1><img src="images/dinos-r-us.svg" alt=""></img></h1>
   </header>
   <main>
   <nav>
@@ -20,7 +20,7 @@
   </nav>
 
   <h2>Hadrosaur</h2>
-  <figure><img scr="hadrosaur.jpg" alt="hadrosaur"><figure>
+  <figure><img scr="images/hadrosaur.jpg" alt=""><figure>
     <p><figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.<figcaption></p>
 
   <h2>Iguanodon</h2>
