Correct the list

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <main>
   <nav>
     <ol>
-      Hadrosaur
-      Iguanodon
-      Stegosaurus
+      <li>Hadrosaur</li>
+      <li>Iguanodon</li>
+      <li>Stegosaurus</li>
     </ol>
   </nav>
 
