Fix image location

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </nav>
 
   <h2>Hadrosaur</h2>
-  <figure><img scr="images/hadrosaur.jpg" alt=""><figure>
+  <figure>
+    <img scr="images/hadrosaur.jpg" alt="">
+  <figure>
     <p><figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.<figcaption></p>
 
   <h2>Iguanodon</h2>
