Allow image to show on website

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
   <h2>Hadrosaur</h2>
   <figure>
+    <figcaption>
     <img scr="images/hadrosaur.jpg" alt="">
-  <figure>
-    <p><figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.<figcaption></p>
+    </figcaption>
+  </figure>
+    <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
 
   <h2>Iguanodon</h2>
     <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
