--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>dinos-r-us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+
 </head>
 <body>
-  <link href=".css" rel="stylesheet">
   <header>
       <h1><img src="images/dinos-r-us.svg" alt=""></img></h1>
   </header>
@@ -21,15 +22,15 @@
 
   <h2>Hadrosaur</h2>
   <figure>
-    <figcaption>
-    <img scr="images/hadrosaur.jpg" alt="">
-    </figcaption>
+    <img src="images/hadrosaur.jpg" alt="">
+    <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
   </figure>
-    <p>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</p>
 
   <h2>Iguanodon</h2>
-    <p>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</p>
-
+  <figure>
+    <img src="images/iguanodon.jpg" atl="">
+    <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
+  </figuer>
   <h2>Stegosaurus</h2>
     <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
   </main>
