--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>dinos-r-us</title>
+    <title>dinos-r-us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 
@@ -31,8 +31,12 @@
     <img src="images/iguanodon.jpg" atl="">
     <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
   </figuer>
+
   <h2>Stegosaurus</h2>
-    <p>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</p>
+  <figure>
+    <img src="images/stegosaurus.jpg" alt="">
+    <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
+  </figure>
   </main>
 </body>
 </html>
