--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <header>
-      <h1><img src="images/dinos-r-us.svg" alt=""></img></h1>
+      <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></img></h1>
   </header>
   <main>
   <nav>
     <ol>
-      <li>Hadrosaur</li>
-      <li>Iguanodon</li>
-      <li>Stegosaurus</li>
+      <li><a href="id-Hadrosaur">Hadrosaur</a></li>
+      <li><a href="id-Iguanodon"> Iguanodon</a></li>
+      <li><a href="id-Stegosaurus">Stegosaurus</a></li>
     </ol>
   </nav>
 
