--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <header>
-      <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></img></h1>
+      <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
   </header>
   <main>
+    <p> Dinos 'R' Us </p>
   <nav>
     <ol>
       <li><a href="id-Hadrosaur">Hadrosaur</a></li>
@@ -28,9 +29,9 @@
 
   <h2>Iguanodon</h2>
   <figure>
-    <img src="images/iguanodon.jpg" atl="">
+    <img src="images/iguanodon.jpg" atl="iguanodon">
     <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
-  </figuer>
+  </figure>
 
   <h2>Stegosaurus</h2>
   <figure>
