--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
     <title>dinos-r-us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
 </head>
@@ -12,7 +13,7 @@
       <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
   </header>
   <main>
-    <p> Dinos 'R' Us </p>
+
   <nav>
     <ol>
       <li><a href="id-Hadrosaur">Hadrosaur</a></li>
@@ -24,19 +25,19 @@
   <h2>Hadrosaur</h2>
   <figure>
     <img src="images/hadrosaur.jpg" alt="">
-    <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
   </figure>
 
-  <h2>Iguanodon</h2>
+  <h3>Iguanodon</h3>
   <figure>
-    <img src="images/iguanodon.jpg" atl="iguanodon">
-    <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
+    <img src="images/iguanodon.jpg" atl="">
+      <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
   </figure>
 
-  <h2>Stegosaurus</h2>
+  <h4>Stegosaurus</h4>
   <figure>
     <img src="images/stegosaurus.jpg" alt="">
-    <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
+      <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
   </figure>
   </main>
 </body>
