Fix a spelling error in the code.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="id-Stegosaurus">Stegosaurus</a></li>
     </ol>
   </nav>
-  <p> Dinos 'R' Us </p>
+  <p>Dinos ’R’ Us</p>
   <h2>Hadrosaur</h2>
   <figure>
     <img src="images/hadrosaur.jpg" alt="">
@@ -30,8 +30,8 @@
 
   <h2>Iguanodon</h2>
   <figure>
-    <img src="images/iguanodon.jpg" atl="">
-      <figcation>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcation>
+    <img src="images/iguanodon.jpg" alt="">
+      <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
   </figure>
 
   <h2>Stegosaurus</h2>
