--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@
 <body>
   <header>
     <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
-  </header>
-  <main>
-  <head>
+
     <nav>
       <ol>
-        <li><a href="id-Hadrosaur">Hadrosaur</a></li>
-        <li><a href="id-Iguanodon"> Iguanodon</a></li>
-        <li><a href="id-Stegosaurus">Stegosaurus</a></li>
+        <li><a href="id-hadrosaur">Hadrosaur</a></li>
+        <li><a href="id-iguanodon"> Iguanodon</a></li>
+        <li><a href="id-stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
-  </head>
+  </header>
+  <main>
     <p>Dinos ’R’ Us</p>
-    <h2 id="Hadrosaur">Hadrosaur</h2>
+    <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="">
       <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
 
-    <h2 id="Iguanodon">Iguanodon</h2>
+    <h2 id="iguanodon">Iguanodon</h2>
     <figure>
       <img src="images/iguanodon.jpg" alt="">
       <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
 
-    <h2 id="Stegosaurus">Stegosaurus</h2>
+    <h2 id="stegosaurus">Stegosaurus</h2>
     <figure>
       <img src="images/stegosaurus.jpg" alt="">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
