Fix the navigation issue and code issue.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav>
       <ol>
-        <li><a href="id-hadrosaur">Hadrosaur</a></li>
-        <li><a href="id-iguanodon"> Iguanodon</a></li>
-        <li><a href="id-stegosaurus">Stegosaurus</a></li>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#iguanodon"> Iguanodon</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
   </header>
