Change the heading to all capital letters.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav>
       <ol>
-        <li><a href="#hadrosaur">Hadrosaur</a></li>
-        <li><a href="#iguanodon"> Iguanodon</a></li>
-        <li><a href="#stegosaurus">Stegosaurus</a></li>
+        <li><a href="#hadrosaur">HADROSAUR</a></li>
+        <li><a href="#iguanodon"> IGUANODON</a></li>
+        <li><a href="#stegosaurus">STEGOSAURUS</a></li>
       </ol>
     </nav>
   </header>
