Switch the placement of a word.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </nav>
   </header>
   <main>
-    <p>Dinos ’R’ Us</p>
+
     <h2 id="hadrosaur">HADROSAUR</h2>
+    <p>Dinos'R'Us</p>
     <figure>
       <img src="images/hadrosaur.jpg" alt="">
       <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
