--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
+    <p>Dinos ’R’ Us</p>
     <nav>
       <ol>
         <li><a href="#hadrosaur">HADROSAUR</a></li>
@@ -19,7 +20,6 @@
     </nav>
   </header>
   <main>
-<p>Dinos 'R' Us</p>
 
     <h2 id="hadrosaur">HADROSAUR</h2>
     <figure>
