Change the font style .

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
   <header>
-    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
-    <p>Dinos ’R’ Us</p>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"></h1>
     <nav>
       <ol>
-        <li><a href="#hadrosaur">HADROSAUR</a></li>
-        <li><a href="#iguanodon"> IGUANODON</a></li>
-        <li><a href="#stegosaurus">STEGOSAURUS</a></li>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#iguanodon"> Iguanodon</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
   </header>
