--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2 id="hadrosaur">HADROSAUR</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="">
-      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+      <figcaption class="bigfig">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
     <h2 id="iguanodon">IGUANODON</h2>
     <figure>
